# ExcelParser

./: CMakeLists.txt  README.md  doc.xlsx  main.cpp
controls/: CMakeLists.txt  CustomButton.qml  CustomComboBox.qml  CustomPathHolder.qml
lib/: appcore.cpp  appcore.h  logger.cpp
lib/excel/: excelhelper.cpp  excelhelper.h  xlcell.hpp
lib/model/: booksheetsmode.cpp  booksheetsmodel.h  sheetcolumnsmodel.cpp  sheetcolumnsmodel.h  sheetmodel.cpp  sheetmodel.h
qml/: main.qml
themes/: CMakeLists.txt  ColorThemes.qml
